# casino-number-guessing-game

./: .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml  trigger_repo_c_ci.yml
src/: res.h
tests/: test_game.cpp
